keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-keycloak-instance
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect : "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect : "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    xlscsde.nhs.uk/dns-record: keycloak
spec:
  ingressClassName: nginx
  rules:
  - host: ${dns_prefix}keycloak.{dns_zone}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: default-instance-service
            port: 
              name: https
  tls:
  - hosts:
    - ${dns_prefix}keycloak.{dns_zone}
    secretName: ${dns_prefix}keycloak.{dns_zone}-tls
